# an2dl

./: .gitignore  README.md  pyproject.toml
homework-1/: Makefile  README.md
homework-1/notebooks/: 0-tomaz-suller-eda.ipynb  1-tomaz-suller-eda.ipynb  1-tomaz-suller-pre-processing.ipynb  1_tomaz_suller_pre_processing.ipynb  2-tomaz-suller-train.ipynb  3-chferra-train-vgg19.ipynb  3-tomaz-suller-analyse.ipynb  3-tomaz-suller-train-val.ipynb  4-tomaz-suller-embedding-quality.ipynb  TestHeatMaps.ipynb  chferra-train-ft_vgg19.ipynb  chferra.ipynb  chferra_data_bg_removal.ipynb
homework-1/submission/: model.py
homework-2/: 00_Data_Analysis.ipynb  Makefile  README.md  list-of-ingredients-for-halal-food-product.xlsx
homework-2/notebooks/: 0-tomaz-suller-eda-from-refika.ipynb  1-chferra-unet-with-residual-block-from-refka.ipynb  1-tomaz-suller-train.ipynb  2-tomaz-suller-loss-failure.ipynb  3-tomaz-suller-analyse.ipynb  chferra-backbone-resnet18.ipynb
homework-2/trials/: 02_ignoreclass_horizontal_vertical_flip_rotation.ipynb  paper-augmentation.ipynb
