[project]
name = "an2dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "numpy>1,<2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "setuptools>=75.3.0",
    "tensorflow==2.16.1",
]
